Fix Vite base path for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://KVRPavanShanmukh.github.io/AVL-TREE-WORD-COUNT",
+  "homepage": "https://kvrpavanshanmukh.github.io/WordCount-Using-AVL-Tree",
   "name": "word-count-avl-webapp",
   "private": true,
   "version": "0.0.0",
